--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,56 +1,55 @@
 name: CI/CD for Dockerized Python App
 
 on:
-    push:
-        branches: [main]
-    pull_request:
-        branches: [main]
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
-    build-and-test:
-        runs-on: ubuntu-latest
+  build-and-test:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v3
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-            - name: Set up Python 3.8
-              uses: actions/setup-python@v4
-              with:
-                  python-version: 3.9
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
 
-            - name: Install dependencies
-              run: |
-                  python -m pip install --upgrade pip
-                  pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-            - name: Run tests
-              run: pytest
-    
-    build-and-publish:
-        needs: build-and-test
-        runs-on: ubuntu-latest
+      - name: Run tests
+        run: pytest
 
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v3
+  build-and-publish:
+    needs: build-and-test
+    runs-on: ubuntu-latest
 
-            - name: Set up Docker Buildx
-              uses: actions/setup-buildx-action@v2
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-            - name: Login to DockerHub
-              uses: docker/login-action@v2
-              with:
-                  username: ${{ secrets.DOCKERHUB_USERNAME }}
-                  password: ${{ secrets.DOCKERHUB_TOKEN }}
-              
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-            - name: Build and push Docker image
-              run: docker/build-push-action@v4
-              with:
-                  context: .
-                  push: true
-                  tags: ${{ secrets.DOCKERHUB_USERNAME }}flask-app:latest
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-            - name: Image digest
-              run: echo ${{ steps.build-and-publish.outputs.digest }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/flask-app:latest
+
+      - name: Image digest
+        run: echo ${{ steps.build-and-publish.outputs.digest }}
